--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 
 <link href="{{ url_for('static', filename='base.css') }}" rel="stylesheet" type="text/css">
-<div class="logo">
+<div class="header logo">
 	<a href='/'><img src='https://raw.githubusercontent.com/gist/literaiiy/33ee272214fd81eb35a54f083bf1a4ed/raw/90ea53a78161bbda95c00fa17c4ddd88c015a27c/tiramisudelta2.svg' alt="Tiramisu Logo" height='6%' width='auto'></a>
 	<form action="/" method="POST">
 		<input type="text" name="content" id="content" autofocus="autofocus" onfocus="this.select()" autocomplete="off" spellcheck="false" placeholder="Search username or UUID">
