--- a/static/base.css
+++ b/static/base.css
@@ -1,6 +1,4 @@
 .logo {
-	position: -webkit-sticky;
-	position: sticky;
 	top: 0;
 	background-color: #3e3d53;
 	margin-top: -8px;
@@ -15,11 +13,11 @@
 } 
 
 .subtitle {
-	font-family: 'Inter'
+	font-family: 'Orienta', sans-serif
 }
 
 body {
-	font-family: 'Inter';
+	font-family: 'Orienta', sans-serif;
 	text-align: center;
 	margin: 0
 }
@@ -79,8 +77,8 @@ body {
 }
 
 .stats {
-	font-family: 'Inter';
-	text-align: center
+	font-family: 'Orienta', sans-serif;
+	text-align: center;
 }
 
 .desc {
@@ -88,7 +86,7 @@ body {
 }
 
 footer {
-	font-family: 'Inter';
+	font-family: 'Orienta', sans-serif;
 	text-align: center
 }
 
@@ -403,7 +401,7 @@ input {
 	margin-bottom: 25px;
 	border: darkgray solid 2px;
 	border-radius: 4px;
-	font-family: 'Inter';
+	font-family: 'Orienta', sans-serif;
 	text-align: center
 }
 
@@ -465,3 +463,41 @@ input {
 #loadOverlay {
 	display: none
 }
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+	background-color: #eee;
+	color: #444;
+	cursor: pointer;
+	padding: 18px;
+	width: 100%;
+	border: none;
+	text-align: left;
+	outline: none;
+	font-size: 15px;
+	transition: 0.4s;
+  }
+  
+  .active, .accordion:hover {
+	background-color: #ccc;
+  }
+  
+  .accordion:after {
+	content: '\002B';
+	color: #777;
+	font-weight: bold;
+	float: right;
+	margin-left: 5px;
+  }
+  
+  .active:after {
+	content: "\2212";
+  }
+  
+  .panel {
+	padding: 0 18px;
+	background-color: white;
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.2s ease-out;
+  }
