--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,7 @@
 {% extends "index.html" %}
 
 
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Meddon&display=swap" rel="stylesheet">
+
 
 {% block head %}
 <!--- HEADER --->
@@ -17,6 +14,9 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='datatables.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Interfamily=Meddon&family=Allerta&family=Palanquin:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orienta&display=swap" rel="stylesheet">
 </head>
 {% endblock %}
 
@@ -47,7 +47,7 @@
 window.onscroll = function() {scrollFunction()};
 
 function scrollFunction() {
-  if (document.body.scrollTop > 70 || document.documentElement.scrollTop > 70) {
+  if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
     document.getElementById("username").style.fontSize = "30px";
     document.getElementById("uuid").style.fontSize = "0";
   } else {
@@ -141,7 +141,6 @@ function scrollFunction() {
                 });
             </script>
         </div>
-        </body>
     </div>
     <div class="columnB">
         <div class="vl"></div>
@@ -322,62 +321,154 @@ function scrollFunction() {
         </tr>
     </table>
 
-    <!-- SW SOLO -->
-    {% for y, x in gamemodes.items() %}
-        <h3> {{ y }} </h3>
-        {% if x['games'] == 0 %}
-        {{username}} has never played {{ y }} SkyWars.
-        {% else %}
-            <p>
-            {% if x['kdrelative'][0] > 0 %}
-                {{username}} performs better in {{y}} than overall, with a <b>{{ x['kdrelative'][0]|abs }}</b> higher K/D (<span class='green'>+{{ x['kdrelative'][1] }}%</span>)
-                {% if x['wlrelative'][0] > 0 %}
-                    and a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>).
-                {% elif x['wlrelative'][0] < 0 %}
-                    but a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>).
-                {% endif %}</p>
-        
-            {% elif x['kdrelative'][0] < 0  %}
-                {{username}} performs worse in {{y}} than overall, with a <b>{{ x['kdrelative'][0]|abs }}</b> lower K/D (<span class='red'>{{x['kdrelative'][1] }}%</span>)
-                {% if x['wlrelative'][0] > 0 %}
-                    but a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>).
-                {% elif x['wlrelative'][0] < 0 %}
-                    and a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>).
-                {% endif %}</p>
-            {% else %}
-                {{username}} performs as average in Solo.
+    <!-- SW MODE -->
+        {% for y, x in gamemodes.items() %}
+            {% if x['games'] != 0 %}
+            <button class='accordion'>{{y}}</button>
+            <div class="panel">
+                <div>
+                    <p>
+                        {% if x['kd'] > 100000 %}
+                            {{username}} has an <span class='gold'>infinite</span> K/D
+                            {% if x['wl'] > 100000 %}
+                                and an <span class='gold'>infinite</span> W/L. Awesome!
+                            {% elif x['wlrelative'][0] > 0 %}
+                                and a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>). Nice work!
+                            {% elif x['wlrelative'][0] < 0 %}
+                                but a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>). Nice work!
+                            {% endif %}
+
+                        {% elif x['kdrelative'][0] > 0 %}
+                            {{username}} performs better in {{y}} than overall, with a <b>{{ x['kdrelative'][0]|abs }}</b> higher K/D (<span class='green'>+{{ x['kdrelative'][1] }}%</span>)
+                            {% if x['wl'] > 100000 %}
+                                and an <span class='gold'>infinite</span> W/L. Nice work!
+                            {% elif x['wlrelative'][0] > 0 %}
+                                and a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>).
+                            {% elif x['wlrelative'][0] < 0 %}
+                                but a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>).
+                            {% endif %}
+                            
+                        {% elif x['kdrelative'][0] < 0  %}
+                            {{username}} performs worse in {{y}} than overall, with a <b>{{ x['kdrelative'][0]|abs }}</b> lower K/D (<span class='red'>{{x['kdrelative'][1] }}%</span>)
+                            {% if x['wl'] > 100000 %}
+                                and an <span class='gold'>infinite</span> W/L. Nice work!
+                            {% elif x['wlrelative'][0] > 0 %}
+                                but a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>).
+                            {% elif x['wlrelative'][0] < 0 %}
+                                and a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>).
+                            {% endif %}
+                        {% else %}
+                            {{username}} performs as average in Solo.
+                        {% endif %}
+                    </p>
+                    <p>
+                        <br><b>{{ x['kills'][0] }}</b> kills <b>({{ x['kills'][1]|round(2) }}%)</b>
+                        <br><b>{{ x['deaths'][0] }}</b> deaths <b>({{ x['deaths'][1]|round(2) }}%)</b>
+                        <br><b>{{x['assists'][0]}}</b> assists  <b>({{ x['assists'][1]|round(2) }}%)</b>
+                        {% if x['kd'] > 100000 %}
+                            <br><b>∞</b> K/D
+                        {% else %}
+                            <br><b>{{ x['kd'] }}</b> K/D
+                        {% endif %}
+                        <br><b>{{ x['survived'][0] }}</b> players survived <b>({{ x['survived'][1]|round(2) }}%)</b>
+                        <br><b>{{x['games'][0]}}</b> games played <b>({{ x['games'][1]|round(2) }}%)</b>
+                        <br><b>{{x['wins'][0]}}</b> wins <b>({{ x['wins'][1]|round(2) }}%)</b>
+                        <br><b>{{x['losses'][0]}}</b> losses <b>({{ x['losses'][1]|round(2) }}%)</b>
+                        {% if x['wl'] > 100000 %}
+                            <br><b>∞</b> W/L - <b>∞%</b> win rate
+                        {% else %}
+                            <br><b>{{ x['wl'] }}</b> W/L - <b>{{x['winperc']}}%</b> win rate
+                        {% endif %}
+                        <br><b>{{x['kit']}}</b> currently equipped
+                        <br>Fastest win: <b>{{x['fastestwin']}}</b>
+                        <br>Highest-kill game: <b>{{x['highkill']}}</b> kills
+                    </p>
             {% endif %}
-            </p>
-            <p>
-            <br><b>{{ x['kills'][0] }}</b> kills <b>({{ x['kills'][1]|round(2) }}%)</b>
-            <br><b>{{ x['deaths'][0] }}</b> deaths <b>({{ x['deaths'][1]|round(2) }}%)</b>
-            <br><b>{{x['assists'][0]}}</b> assists  <b>({{ x['assists'][1]|round(2) }}%)</b>
-            <br><b>{{ x['kd'] }}</b> K/D
-            <br><b>{{ x['survived'][0] }}</b> players survived <b>({{ x['survived'][1]|round(2) }}%)</b>
-            <br><b>{{x['games'][0]}}</b> games played <b>({{ x['games'][1]|round(2) }}%)</b>
-            <br><b>{{x['wins'][0]}}</b> wins <b>({{ x['wins'][1]|round(2) }}%)</b>
-            <br><b>{{x['losses'][0]}}</b> losses <b>({{ x['losses'][1]|round(2) }}%)</b>
-            <br><b>{{ x['wl'][0] }}</b> W/L - <b>{{x['winperc']}}%</b> win rate
-            <br><b>{{x['kit']}}</b> currently equipped
-            <br>Fastest win: <b>{{x['fastestwin']}}</b>
-            <br>Highest-kill game: <b>{{x['highkill']}}</b> kills
-            </p>
-            {% endif %}
+                </div>
+            </div>
         {% endfor %}
 
-<!--         <div class="splide">
-            <div class="splide__track">
-                <ul class="splide__list">
-                    <li class="splide__slide">Slide 01</li>
-                    <li class="splide__slide">Slide 02</li>
-                    <li class="splide__slide">Slide 03</li>
-                </ul>
+    <!-- SW MODE 2-->
+        {% for y, x in gamemodes2.items() %}
+            {% if x['games'][0] != 0 %}
+            <button class='accordion'>{{y}}</button>
+            <div class="panel">
+                <div>
+                    <p>
+                    {% if x['kd'] > 100000 %}
+                        {{username}} has an <span class='gold'>infinite</span> K/D
+                        {% if x['wl'] > 100000 %}
+                            and an <span class='gold'>infinite</span> W/L. Awesome!
+                        {% elif x['wlrelative'][0] > 0 %}
+                            and a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>). Nice work!
+                        {% elif x['wlrelative'][0] < 0 %}
+                            but a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>). Nice work!
+                        {% endif %}
+
+                    {% elif x['kdrelative'][0] > 0 %}
+                        {{username}} performs better in {{y}} than overall, with a <b>{{ x['kdrelative'][0]|abs }}</b> higher K/D (<span class='green'>+{{ x['kdrelative'][1] }}%</span>)
+                        {% if x['wl'] > 100000 %}
+                            and an <span class='gold'>infinite</span> W/L. Nice work!
+                        {% elif x['wlrelative'][0] > 0 %}
+                            and a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>).
+                        {% elif x['wlrelative'][0] < 0 %}
+                            but a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>).
+                        {% endif %}
+                        
+                    {% elif x['kdrelative'][0] < 0  %}
+                        {{username}} performs worse in {{y}} than overall, with a <b>{{ x['kdrelative'][0]|abs }}</b> lower K/D (<span class='red'>{{x['kdrelative'][1] }}%</span>)
+                        {% if x['wl'] > 100000 %}
+                            and an <span class='gold'>infinite</span> W/L. Nice work!
+                        {% elif x['wlrelative'][0] > 0 %}
+                            but a <b>{{ x['wlrelative'][0]|abs }}</b> higher W/L (<span class='green'>+{{ x['wlrelative'][1]|abs }}%</span>).
+                        {% elif x['wlrelative'][0] < 0 %}
+                            and a  <b>{{ x['wlrelative'][0]|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelative'][1] }}%</span>).
+                        {% endif %}
+                    {% else %}
+                        {{username}} performs as average in Solo.
+                    {% endif %}
+                    </p>
+                    <p>
+                        <br><b>{{ x['kills'][0] }}</b> kills <b>({{ x['kills'][1]|round(2) }}%)</b>
+                        <br><b>{{ x['deaths'][0] }}</b> deaths <b>({{ x['deaths'][1]|round(2) }}%)</b>
+                        <br><b>{{x['assists'][0]}}</b> assists  <b>({{ x['assists'][1]|round(2) }}%)</b>
+                        {% if x['kd'] > 100000 %}
+                            <br><b>∞</b> K/D
+                        {% else %}
+                            <br><b>{{ x['kd'] }}</b> K/D
+                        {% endif %}
+                        <br><b>{{ x['survived'][0] }}</b> players survived <b>({{ x['survived'][1]|round(2) }}%)</b>
+                        <br><b>{{x['games'][0]}}</b> games played <b>({{ x['games'][1]|round(2) }}%)</b>
+                        <br><b>{{x['wins'][0]}}</b> wins <b>({{ x['wins'][1]|round(2) }}%)</b>
+                        <br><b>{{x['losses'][0]}}</b> losses <b>({{ x['losses'][1]|round(2) }}%)</b>
+                        {% if x['wl'] > 100000 %}
+                            <br><b>∞</b> W/L - <b>∞%</b> win rate
+                        {% else %}
+                            <br><b>{{ x['wl'] }}</b> W/L - <b>{{x['winperc']}}%</b> win rate
+                        {% endif %}
+                    </p>
+            {% endif %}
+                </div>
             </div>
-        </div>
-        <script>
-            document.addEventListener( 'DOMContentLoaded', function () {
-                new Splide( '.splide' ).mount();
-            } );
-        </script> -->
-</div>
+        {% endfor %}
+
+
+    <script>
+        var acc = document.getElementsByClassName("accordion");
+        var i;
+        
+        for (i = 0; i < acc.length; i++) {
+          acc[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var panel = this.nextElementSibling;
+            if (panel.style.maxHeight) {
+              panel.style.maxHeight = null;
+            } else {
+              panel.style.maxHeight = panel.scrollHeight + "px";
+            } 
+          });
+        }
+    </script>
+
+</body>
 {% endblock %}
