--- a/templates/base.html
+++ b/templates/base.html
@@ -169,7 +169,7 @@ function scrollFunction() {
 
         <!--- GUILD --->
         {% if guildList[0] != 0 %}
-            <b>{{ guildList[2] }}</b> in guild <b><a class="graylink" href="/g/{{ username }}">{{ guildList[1] }}</a> <span class='{{ guildList[3] }}'>[{{ guildList[0] }}]<span></b></p>
+            <b>{{ guildList[2] }}</b> in guild <b>{{ guildList[1] }}<span class='{{ guildList[3] }}'> [{{ guildList[0] }}]<span></b></p>
         {% endif %}
 
         <!--- SENIORITY  --->
@@ -481,34 +481,7 @@ function scrollFunction() {
             </p>
         {% endif %}
 
-        <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-        <div class='canvasContainer' style='position:relative;height:25%; width:25%'>
-            <canvas id="myChart"></canvas>
-            <script>
-            var ctx = document.getElementById('myChart');
-            // @ts-ignore
-            var swKTL = {{swKTLList}};
-            var myChart = new Chart(ctx, {
-                type: 'doughnut',
-                responsive: true,
-                maintainAspectRatio:false,
-                data: {
-                    labels: ['Melee', 'Void', 'Bow', 'Mob', 'Fall'],
-                    datasets: [{
-                        label: 'I dunno',
-                        data: swKTL,
-                        borderWidth: 1,
-                        backgroundColor: [
-                            'rgba(255, 99, 132, 0.2)',
-                            'rgba(54, 162, 235, 0.2)',
-                            'rgba(255, 206, 86, 0.2)',
-                            'rgba(75, 192, 192, 0.2)',
-                            'rgba(153, 102, 255, 0.2)',
-                        ],
-                    }]
-                },
-            });
-            </script>
+
         </div>
 
         <!-- Time Wasted -->
