--- a/static/base.css
+++ b/static/base.css
@@ -13,11 +13,11 @@
 } 
 
 .subtitle {
-	font-family: 'Orienta', sans-serif
+	font-family: 'Inter', sans-serif
 }
 
 body {
-	font-family: 'Orienta', sans-serif;
+	font-family: 'Inter', sans-serif;
 	text-align: center;
 	margin: 0
 }
@@ -77,7 +77,7 @@ body {
 }
 
 .stats {
-	font-family: 'Orienta', sans-serif;
+	font-family: 'Inter', sans-serif;
 	text-align: center;
 }
 
@@ -86,7 +86,7 @@ body {
 }
 
 footer {
-	font-family: 'Orienta', sans-serif;
+	font-family: 'Inter', sans-serif;
 	text-align: center
 }
 
@@ -401,7 +401,7 @@ input {
 	margin-bottom: 25px;
 	border: darkgray solid 2px;
 	border-radius: 4px;
-	font-family: 'Orienta', sans-serif;
+	font-family: 'Inter', sans-serif;
 	text-align: center
 }
 
