LIKELY UNSTABLE - I think I did it

--- a/templates/base.html
+++ b/templates/base.html
@@ -529,7 +529,7 @@ function scrollFunction() {
                 responsive: true,
                 maintainAspectRatio:false,
                 data: {
-                    labels: ['sw', 'Void', 'Bow', 'Mob', 'Fall'],
+                    labels: ['Melee', 'Void', 'Bow', 'Mob', 'Fall'],
                     datasets: [{
                         label: 'I dunno',
                         data: swKTL,
